src/test/ui/parser/lifetime-in-pattern.stderr
error: unexpected lifetime `'a` in pattern
  --> $DIR/lifetime-in-pattern.rs:3:10
   |
LL | fn test(&'a str) {
   |          ^^ unexpected lifetime

error: aborting due to previous error

